--- a/sections/custom-text.liquid
+++ b/sections/custom-text.liquid
@@ -267,8 +267,7 @@
       "min": 1.2,
       "max": 2.5,
       "step": 0.1,
-      "default": 1.6,
-      "unit": ""
+      "default": 1.6
     },
     {
       "type": "header",
