Update carousel to support unlimited images (up to 50) with clearer block naming

--- a/sections/image-carousel.liquid
+++ b/sections/image-carousel.liquid
@@ -207,7 +207,8 @@
   "blocks": [
     {
       "type": "image",
-      "name": "Image",
+      "name": "Carousel Image",
+      "limit": 50,
       "settings": [
         {
           "type": "image_picker",
@@ -233,6 +234,15 @@
     {
       "name": "Image Carousel",
       "blocks": [
+        {
+          "type": "image"
+        },
+        {
+          "type": "image"
+        },
+        {
+          "type": "image"
+        },
         {
           "type": "image"
         },
